argocd/projects/immich/immich-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  selector:
    matchLabels:
      app: immich-server
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v1.53.0
        command:
          - "/bin/sh"
          - "./start-server.sh"
        ports:
        - containerPort: 3001
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: immich-data
        resources:  {}
        livenessProbe:
          httpGet:
            path: /server-info/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data
